tests/semantic_tokens/snapshots/r#mod__semantic_tokens__block_tokens__heading_token_type.snap
---
source: tests/semantic_tokens/block_tokens.rs
expression: "format!(\"{:#?}\", tokens)"
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 1,
        token_type: 3,
        token_modifiers_bitset: 0,
    },
]
